Fixed gaps in css

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -161,14 +161,12 @@ button,
 }
 
 .grid__item:last-child {
+  grid-column: 3 / 3;
+  grid-row: 1 / 3;
   -ms-grid-column: 3;
-  grid-column-start: 3;
   -ms-grid-column-span: 0;
-  grid-column-end: 3;
   -ms-grid-row: 1;
-  grid-row-start: 1;
   -ms-grid-row-span: 2;
-  grid-row-end: 3;
 }
 
 main {
@@ -216,7 +214,7 @@ header img {
 
   to {
     -webkit-transform: translate(-200px, -5px);
-            transform: translate(-200px, -5px);
+    transform: translate(-200px, -5px);
   }
 }
 
@@ -240,7 +238,7 @@ header img {
 @-webkit-keyframes bus-driving {
   from {
     -webkit-transform: translate(350px, 5px);
-            transform: translate(350px, 5px);
+    transform: translate(350px, 5px);
   }
 
   to {
